--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -252,6 +252,11 @@
   outline: none;
   cursor: pointer;
 }
+.cart-checkout .cart-login {
+  background-color: yellow;
+  color: black;
+}
+
 .continue-shopping,
 .start-shopping {
   margin-top: 1rem;
